fix alignment issue with logo on desktop

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -229,6 +229,10 @@ a:hover {
         display: block;
     }
 
+    .main-nav__logo {
+        margin-left: -30px;
+    }
+
     .main-nav__logo-text {
         font-size: 20px;
     }
